feat: add standalone auto selection page
